--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,10 @@
 <header class="row">
 
-  <div class="contedor">
+  <div id="contedor-sup">
 
     <app-logo-arg></app-logo-arg>
     <app-social></app-social>
+    <app-boton-login></app-boton-login>
     
   </div>
 
