--- a/src/styles.css
+++ b/src/styles.css
@@ -9,4 +9,5 @@ body {
     max-width: 1280vh;
     height: 100%;
     background:linear-gradient(252.34deg, rgba(0, 209, 255, 0.79) -3.42%, rgba(149, 187, 233, 0.79) 23.27%, rgba(160, 116, 215, 0.762656) 89.98%, rgba(255, 97, 182, 0.74) 112.41%);
+    background-position: fixed;
 }
