--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,17 @@
-<header class="row">
+<header>
 
-  <div id="contedor-sup">
-
-    <app-logo-arg></app-logo-arg>
-    <app-social></app-social>
-    <app-boton-login></app-boton-login>
-    
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <app-logo-arg></app-logo-arg>
+      </div>
+      <div class="col-lg-4">
+        <app-social></app-social>
+      </div>
+      <div class="col-lg-4 botones">        
+        <app-boton-login></app-boton-login>
+      </div>
+    </div>
   </div>
 
 </header>
