se creo el componente about, se agrego foto y descripcion, falta seguir editando

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 header{
     display: flex;
-    width: 80%;
+    /* width: 80%; */
     height: 450px;
     margin: 4.5rem auto;
     background-color: white;
