--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,6 +1,26 @@
 .conteiner {
+
     width: 100%;
-    padding: 4rem;
+    /* padding: 4rem; */
+
+}
+
+.cont__about{
+    display: grid;
+    margin-top: 15rem;
+    margin-bottom: 7rem;
+}
+
+.sobremi{
+    padding-bottom: 5rem;
+}
+
+h2{
+    font-size: 3rem;
+}
+
+.cont__text{
+    align-items: center;
 }
 
 #sobre{
