--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container cont__about">
     <section id="sobre">
         <div class="row">
-            <h2 class="sombra1">SOBRE MI</h2>
+            <h2 class="sobremi">SOBRE MI</h2>
         </div>
 
-        <div class="row">
+        <div class="row cont__text">
             <div class="col-lg-6 foto">
                 <img class="fotoperfil" src="../../../assets/perfil-sol-circu2-violeta.png">
             </div>
