--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 header{
     display: flex;
     /* width: 80%; */
-    height: 450px;
+    height: 32rem;
     margin: 4.5rem auto;
     background-color: white;
     justify-content: space-between;
