--- a/src/app/components/logo-arg/logo-arg.component.css
+++ b/src/app/components/logo-arg/logo-arg.component.css
@@ -4,7 +4,7 @@
 }
 .logo img{
     width: 6rem;
-    background: rgba(174, 151, 255, 0.779);
+    background: linear-gradient(252.34deg,rgba(203, 161, 254, 0.763) 21.45%, rgba(141, 191, 253, 0.779) 80.88%);
     border-radius: 0.5rem;
     padding: 0.2rem;
 }
