--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,26 +1,11 @@
 .conteiner {
-
+    display: grid;
     width: 100%;
     /* padding: 4rem; */
-
 }
 
-.cont__about{
+.row{
     display: grid;
-    margin-top: 15rem;
-    margin-bottom: 7rem;
-}
-
-.sobremi{
-    padding-bottom: 5rem;
-}
-
-h2{
-    font-size: 3rem;
-}
-
-.cont__text{
-    align-items: center;
 }
 
 #sobre{
@@ -30,7 +15,29 @@ h2{
     align-items: center;
 }
 
+.cont__about{
+    margin-top: 15rem;
+    margin-bottom: 7rem;
+}
+
+.cont__sobremi{
+    padding-bottom: 5rem;
+}
+
+h2{
+    font-size: 3rem;
+    
+}
+
+.cont__text{
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 .foto img {
+    grid-row: 1;
     width: 20rem;
     border-radius: 50%;
 }
