--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,15 +1,19 @@
 <div class="container cont__about">
     <section id="sobre">
         <div class="row">
-            <h2 class="sobremi">SOBRE MI</h2>
+            <h2 class="cont__sobremi">SOBRE MI</h2>
         </div>
 
         <div class="row cont__text">
-            <div class="col-lg-6 foto">
+            <div class="col-lg-12 col-md-12 col-sm-12 foto">
                 <img class="fotoperfil" src="../../../assets/perfil-sol-circu2-violeta.png">
             </div>
 
-            <div class="col-lg-6 texto">
+            <!-- <div class="col-lg-3 col-md-3 col-sm-12 con__subtitle">
+                <p>Full Stack Web Developer</p>
+            </div> -->
+
+            <div class="col-lg-12 col-md-12 col-sm-12 texto">
                 <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
                     participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
                     En el ámbito laboral me desenvolví como vendedora en el sector retail con más de 5 años de
