--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <app-header></app-header>
   <app-about></app-about>
   <app-experience></app-experience>
+  <app-education></app-education>
 </div>
 
