--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -13,6 +13,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Poppins",sans-serif;
+    color: #ffffff;
+    font-weight: 500;
 }
 
 .cont__about{
@@ -40,4 +43,8 @@ h2{
     grid-row: 1;
     width: 20rem;
     border-radius: 50%;
+}
+
+.texto p{
+    color: black;
 }
