--- a/src/app/components/boton-login/boton-login.component.html
+++ b/src/app/components/boton-login/boton-login.component.html
@@ -1,3 +1,3 @@
 <div>
-    <a class="btn btn-primary" role="button" aria-disabled="true">Primary link</a>
+    <a class="btn btn-primary" role="button" aria-disabled="true">login</a>
 </div>
