--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -26,17 +26,16 @@ li{
 
 p{
     text-align: center;
+    color: black;
 }
-
-/* .conteiner {
-    width: 100%;
-    padding: 4rem;
-} */
 
 .cont__experience{
     /* display: grid; */
     margin-top: 15rem;
     margin-bottom: 7rem;
+    font-family: "Poppins",sans-serif;
+    color: #ffffff;
+    font-weight: 500;
 }
 
 .experience__title{
