--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -12,4 +12,8 @@
             </div>
         </div>
     </section>
+    <div class="bar">
+        <app-progress-bar></app-progress-bar>
+    </div>
+
 </div>
