--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <app-experience></app-experience>
   <app-education></app-education>
   <app-skills></app-skills>
+  <app-proyects></app-proyects>
 </div>
 
