--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -33,17 +33,7 @@ p{
     color: black;
 }
 
-.conteiner {
-    width: 100%;
-    padding: 50px 30px;
-    background-color: rgba(255,255,255,0.06);
-    border: 2px solid rgba(255,255,255,0.06);
-    border-radius: 10px;
-    box-shadow: 0 20px 30px rgba(0,0,0,0.2);
-    backdrop-filter: blur(10px);
-}
-
-.container *{
+.container {
     font-family: "Poppins",sans-serif;
     color: #ffffff;
     font-weight: 500;
