--- a/src/app/components/progress-bar/progress-bar.component.css
+++ b/src/app/components/progress-bar/progress-bar.component.css
@@ -1,7 +1,8 @@
-section{
+/* section{
     display: flex;
     justify-content: center;
-}
+    padding-top: 6rem;
+} */
 .wrapper{
     width: 40%;
     min-width: 500px;
@@ -12,7 +13,7 @@ section{
 }
 .container{
     width: 100%;
-    padding: 50px 30px;
+    padding: 20px 10px;
     background-color: rgba(255,255,255,0.06);
     border: 2px solid rgba(255,255,255,0.06);
     border-radius: 10px;
@@ -23,8 +24,8 @@ section{
     height: 220px;
     width: 220px;
     background: linear-gradient(
-        #ff0e72,
-        #ff66a6
+        #ff4391,
+        #ff9fc7
     );
     border-radius: 50%;
     position: absolute;
@@ -36,8 +37,8 @@ section{
     height: 180px;
     width: 180px;
     background: linear-gradient(
-        #3da5e0,
-        #325ea5
+        #73c8f9,
+        #6ba4ff
     );
     border-radius: 50%;
     position: absolute;
@@ -53,9 +54,10 @@ section{
 h2{
     margin-bottom: 40px;
     letter-spacing: 2px;
+    text-align: center;
 }
 .skills:not(:last-child){
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .details{
     width: 100%;
@@ -76,9 +78,9 @@ h2{
     width: 0;
     height: 5px;
     border-radius: 10px;
-    background-color: #badefc;
-    border: 1px solid #1c97fc;
-    box-shadow: 0 0 5px rgba(28,151,252,0.6);
+    background-color: #af94ff;
+    border: 1px solid #bd87ff;
+    box-shadow: 0 0 5px rgba(255, 140, 240, 0.6);
 }
 #html-bar{
     animation: html-fill 2s forwards;
@@ -108,6 +110,22 @@ h2{
     animation: jQuery-fill 2s forwards;
 }
 @keyframes jQuery-fill{
+    100%{
+        width: 68%;
+    }
+}
+#angular-bar{
+    animation: angular-fill 2s forwards;
+}
+@keyframes angular-fill{
+    100%{
+        width: 68%;
+    }
+}
+#php-bar{
+    animation: php-fill 2s forwards;
+}
+@keyframes php-fill{
     100%{
         width: 68%;
     }
