--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -3,7 +3,7 @@
         <div class="shape-1"></div>
         <div class="shape-2"></div>
         <div class="container">
-            <h2>MY CODING SKILLS</h2>
+            <h2>HARD SKILLS</h2>
             <div class="skills">
                 <div class="details">
                     <span>HTML</span>
@@ -38,6 +38,24 @@
                 </div>
                 <div class="bar">
                     <div id="jQuery-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>Angular</span>
+                    <span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="angular-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>PHP</span>
+                    <span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="php-bar"></div>
                 </div>
             </div>
         </div>
