se agrego el componente footer, y se arreglo el header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,13 +2,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4">
         <app-logo-arg></app-logo-arg>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4">
         <app-social></app-social>
       </div>
-      <div class="col-lg-4 botones">        
+      <div class="col-lg-4 col--4 botones">        
         <app-boton-login></app-boton-login>
       </div>
     </div>
