--- a/src/app/components/boton-login/boton-login.component.html
+++ b/src/app/components/boton-login/boton-login.component.html
@@ -1,3 +1,8 @@
-<div>
-    <a class="btn btn-primary" role="button" aria-disabled="true">login</a>
+<div class="container">
+    <div class="boto">
+        <a class="btn btn-primary" role="button" aria-disabled="true" >login</a>
+    </div>
+    <div>
+        <a class="btn btn-primary" role="button" aria-disabled="true" >login</a>
+    </div>
 </div>
