--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -2,6 +2,7 @@ h2{
     font-size: 3rem;
     text-transform: uppercase;
     text-align: center;
+    text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
 }
 
 h3{
