--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,6 +7,13 @@ header{
     justify-content: space-between;
     padding: 2rem;
     border-radius: 2rem;
+    align-items:flex-start;
+}
+
+.row{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    align-items: center;
 }
 
 div{
