--- a/src/app/components/proyects/proyects.component.css
+++ b/src/app/components/proyects/proyects.component.css
@@ -11,8 +11,9 @@ h2{
     font-size: 3rem;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 8rem;
     margin-top: 1rem;
+    text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
 }
 
 p{
