--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* html {
     font-size: 62.5%;
 } */
+:root{
+    --fondo1:linear-gradient(252.34deg, rgba(255, 174, 218, 0.74) -4.03%, rgba(209, 172, 255, 0.762656) 21.45%, rgba(157, 201, 255, 0.79) 80.88%, rgba(107, 208, 255, 0.79) 112.41%);
+    --fondo2:linear-gradient(252.34deg, rgba(107, 208, 255, 0.79) -0.39%, rgba(157, 178, 255, 0.79) 32.36%, rgba(209, 172, 255, 0.762656) 90.58%, rgba(255, 174, 218, 0.74) 112.41%);
+}
 
 body {
     font-size: 16px;
@@ -8,7 +12,7 @@ body {
     width: 100%;
     max-width: 1280vh;
     height: 100%;
-    background:linear-gradient(252.34deg, rgba(255, 174, 218, 0.74) -4.03%, rgba(209, 172, 255, 0.762656) 21.45%, rgba(157, 201, 255, 0.79) 80.88%, rgba(173, 240, 255, 0.79) 112.41%);
+    background: var(--fondo2);
     background-position: fixed;
 }
 
