se agrego una ilustracion svg al header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,10 @@
         <app-boton-login></app-boton-login>
       </div>
     </div>
+
+    <div class="col-lg-12 banner">
+      <img src="../../../assets/ilustracion-1.svg" alt="ilustration">
+    </div>
   </div>
 
 </header>
