--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,12 +10,6 @@ header{
     align-items:flex-start;
 }
 
-.row{
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    align-items: center;
-}
-
 div{
     /* display: grid;
     grid-template-columns: 63% 20% 20%; */
@@ -23,12 +17,23 @@ div{
     margin: 0 auto;
 }
 
-/* #contenedor-sup{
+img{
+    width: 40%;margin: 0 auto;
+}
+
+.row{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    align-items: center;
+}
+
+.container{
+    display: grid;
     height: 20rem;
     grid-template-columns: 50%, 25%, 25%;
     align-items: center;
     justify-content: space-between;
-} */
+}
 
 .row{
     display: grid;
@@ -38,4 +43,10 @@ div{
 .botones{
     display: flex;
     justify-content: flex-end;
+}
+
+.banner{
+    display: grid;
+    grid-column: 1/2;
+margin-top: 4rem;
 }
