--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,4 +1,6 @@
 <div class="container cont__experience">
+    <div class="shape-2"></div>
+    <div class="shape-1"></div>
     <section id="experience">
         <div class="row">
             <h2 class="experience__title">experiencia</h2>
