--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
-
+  <div class="shape-2"></div>
+  <div class="shape-1"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4">
