--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,7 +1,5 @@
-<section>
+<section class="contenedor">
     <div class="wrapper">
-        <div class="shape-1"></div>
-        <div class="shape-2"></div>
         <div class="container">
             <h2>HARD SKILLS</h2>
             <div class="skills">
@@ -60,5 +58,66 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- barras para las soft skills -->
+
+    <div class="wrapper skills">
+        <div class="container">
+            <h2>SOFT SKILLS</h2>
+            <div class="skills">
+                <div class="details">
+                    <span>HTML</span>
+                    <span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="html-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>CSS</span>
+                    <span>75%</span>
+                </div>
+                <div class="bar">
+                    <div id="css-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>Javascript</span>
+                    <span>82%</span>
+                </div>
+                <div class="bar">
+                    <div id="js-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>jQuery</span>
+                    <span>68%</span>
+                </div>
+                <div class="bar">
+                    <div id="jQuery-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>Angular</span>
+                    <span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="angular-bar"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>PHP</span>
+                    <span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="php-bar"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
