--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -25,5 +25,7 @@
                 </ul>                
             </div>
         </div>
+        <div class="shape-3"></div>
+        <div class="shape-1"></div>
     </section>
 </div>
