--- a/src/app/components/proyects/proyects.component.css
+++ b/src/app/components/proyects/proyects.component.css
@@ -4,6 +4,7 @@
     font-weight: 500;text-align: center;
     display:flex;
     margin: 0 auto;
+    margin-top:8rem;
     margin-bottom: 8rem;
 }
 
