--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,7 +1,7 @@
-#skills{
+/* #skills{
     display: flex;
     align-items: center;
-}
+} */
 
 #skills h2{
     margin-top: 2rem;
@@ -11,30 +11,70 @@
     text-align: center;
     text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
 }
-.cont__skills #descrip {
+
+.container{
     display: grid;
-    grid-template-rows: auto;
+    font-family: "Poppins",sans-serif;
+    color: #ffffff;
+    font-weight: 500;
+    justify-content: center;
+    position: relative;
+}
+
+#descrip {
     padding: 2rem , 0;
     align-items: center;
-    margin-bottom: 10rem;
+    margin-bottom: 6rem;
     text-align: center;
 }
 
 #descrip p{
+    margin-top: 10rem;
+    margin-bottom: 10rem;
     color: black;
-    margin-top: 2rem;
-
 }
 
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    font-family: "Poppins",sans-serif;
-    color: #ffffff;
-    font-weight: 500;
-    justify-content: flex-end;
-}
 .bar{
- margin-top: 20rem;
- margin-bottom: 0;
+ margin-bottom: 4rem;
+}
+
+.shape-1{
+    height: 220px;
+    width: 220px;
+    background: linear-gradient(
+        #ff4372,
+        #ff75b5
+    );
+    border-radius: 50%;
+    position: absolute;
+    bottom: -100px;
+    left: -150px;
+    z-index: -1;
+}
+.shape-2{
+    height: 180px;
+    width: 180px;
+    background: linear-gradient(
+        #73c8f9,
+        #6ba4ff
+    );
+    border-radius: 50%;
+    position: absolute;
+    top: -90px;
+    left: 194px;
+    z-index: -1;
+}
+
+.shape-3{
+    height: 280px;
+    width: 280px;
+    background: linear-gradient(
+        #dfa4ff,
+        #c690ff
+    );
+    border-radius: 50%;
+    position: absolute;
+    top: 420px;
+    right: -90px;
+    z-index: -1;
 }
