--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,8 +1,9 @@
-<div class="container">
-
-    <section id="skills">
-        <div class="cont__skills">
-            <div id="descrip" class="row">
+<section id="skills">
+    <div class="container">
+        <div class="shape-2"></div>
+        <div class="shape-1"></div>
+        <!-- <div class="cont__skills"> -->
+            <div id="descrip" class="col-lg-12">
                 <h2>SKILLS</h2>
                 <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
                     participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
@@ -10,10 +11,10 @@
                     experiencia en atención al público y 3 años como encargada de la gestión y coordinación de grupos de
                     trabajo.</p>
             </div>
-        </div>
-    </section>
-    <div class="bar">
+        <!-- </div> -->
+        <div class="shape-3"></div>
+        <div class=" col-lg-6 bar">
             <app-progress-bar></app-progress-bar>
+        </div>
     </div>
-
-</div>
+</section>
