--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div>
+<app-barra-iconos></app-barra-iconos>
+<div class="container">
   <app-header></app-header>
   <app-about></app-about>
   <app-experience></app-experience>
