arreglos esteticos y de codigo menor

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,19 +1,16 @@
-<div class="container cont__about">
+<div class="container">
     <section id="sobre">
         <div class="row">
             <h2 class="cont__sobremi">SOBRE MI</h2>
         </div>
 
-        <div class="row cont__text">
-            <div class="col-lg-12 col-md-12 col-sm-12 foto">
+        <div class="cont__text">
+            <aside class="col-lg-12 col-md-12 col-sm-12 foto">
                 <img class="fotoperfil" src="../../../assets/perfil-sol-circu2-violeta.png">
-            </div>
-
-            <!-- <div class="col-lg-3 col-md-3 col-sm-12 con__subtitle">
                 <p>Full Stack Web Developer</p>
-            </div> -->
+            </aside>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 texto">
+            <aside class="col-lg-12 col-md-12 col-sm-12 texto">
                 <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
                     participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
                     En el ámbito laboral me desenvolví como vendedora en el sector retail con más de 5 años de
@@ -22,7 +19,7 @@
                     Me considero una persona dinámica y adaptable a los diferentes entornos que se me presenten, con una
                     excelente predisposición al trabajo en equipo y a la resolución rápida de problemas complejos sin
                     perder la perspectiva laboral y las relaciones profesionales.</p>
-            </div>
+            </aside>
         </div>
     </section>
 </div>
