--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 <section class="contenedor">
-    <div class="wrapper">
+        <div class="wrapper">
         <div class="container">
             <h2>HARD SKILLS</h2>
             <div class="skills">
@@ -69,7 +69,7 @@
                     <span>HTML</span>
                     <span>90%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="html-bar"></div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <span>CSS</span>
                     <span>75%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="css-bar"></div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <span>Javascript</span>
                     <span>82%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="js-bar"></div>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                     <span>jQuery</span>
                     <span>68%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="jQuery-bar"></div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <span>Angular</span>
                     <span>90%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="angular-bar"></div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <span>PHP</span>
                     <span>90%</span>
                 </div>
-                <div class="bar">
+                <div class="bar-2">
                     <div id="php-bar"></div>
                 </div>
             </div>
