--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,42 +1,29 @@
-.conteiner {
-    display: grid;
-    width: 100%;
-    /* padding: 4rem; */
-}
-
-.row{
-    display: grid;
-}
-
-#sobre{
-    padding: 4rem , 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Poppins",sans-serif;
-    color: #ffffff;
-    font-weight: 500;
-}
-
-.cont__about{
-    margin-top: 15rem;
-    margin-bottom: 7rem;
-}
-
-.cont__sobremi{
-    padding-bottom: 5rem;
-}
 
 h2{
     font-size: 3rem;
     text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);    
+}
+.container{
+    display: flex;
+    grid-template-columns: repeat(2,1fr);
+    font-family: "Poppins",sans-serif;
+    color: #ffffff;
+    font-weight: 500;
+    position: relative;
+    margin-top: 15rem;
+    margin-bottom: 7rem;
+}
+.row{
+    display: grid;
+    justify-content: center;
 }
 
 .cont__text{
     display: grid;
     grid-auto-flow: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .foto img {
@@ -45,6 +32,19 @@ h2{
     border-radius: 50%;
 }
 
+.foto p{
+    margin-top: 2rem;
+    text-align: center;
+}
 .texto p{
     color: black;
+    text-align: center;
+}
+
+@media (min-width: 480) {
+    
+}
+
+@media (min-width: 768) {
+    
 }
