--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -97,3 +97,13 @@ p {
     right: -100px;
     z-index: -1;
 }
+
+.caja{
+    width: 100%;
+    padding: 20px 10px;
+    background-color: rgba(255,255,255,0.06);
+    border: 2px solid rgba(255,255,255,0.06);
+    border-radius: 10px;
+    box-shadow: 0 20px 30px rgba(0,0,0,0.2);
+    backdrop-filter: blur(10px)
+}
