--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
         <footer>
+<!-- derecho de autor, año y links del programa -->
             <div class="col-lg-12 nom">
                 <h5>©Gabriela Soledad Adorno | 2022 </h5>
                 <a class="nom__a" href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento">
@@ -11,7 +12,7 @@
                     #YoProgramo
                 </a>
             </div>
-    
+<!-- iconos de redes sociales -->
             <div class=" col-lg-12 redes">
     
                 <a class="nom__a" href="https://www.linkedin.com/in/gabriela-adorno-0b3351208/" target="_blank">
