--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -5,7 +5,7 @@
             <div class="skills">
                 <div class="details">
                     <span>HTML</span>
-                    <span>90%</span>
+                    <span>70%</span>
                 </div>
                 <div class="bar">
                     <div id="html-bar"></div>
@@ -14,7 +14,7 @@
             <div class="skills">
                 <div class="details">
                     <span>CSS</span>
-                    <span>75%</span>
+                    <span>55%</span>
                 </div>
                 <div class="bar">
                     <div id="css-bar"></div>
@@ -23,7 +23,7 @@
             <div class="skills">
                 <div class="details">
                     <span>Javascript</span>
-                    <span>82%</span>
+                    <span>32%</span>
                 </div>
                 <div class="bar">
                     <div id="js-bar"></div>
@@ -32,7 +32,7 @@
             <div class="skills">
                 <div class="details">
                     <span>jQuery</span>
-                    <span>68%</span>
+                    <span>38%</span>
                 </div>
                 <div class="bar">
                     <div id="jQuery-bar"></div>
@@ -41,7 +41,7 @@
             <div class="skills">
                 <div class="details">
                     <span>Angular</span>
-                    <span>90%</span>
+                    <span>48%</span>
                 </div>
                 <div class="bar">
                     <div id="angular-bar"></div>
@@ -50,7 +50,7 @@
             <div class="skills">
                 <div class="details">
                     <span>PHP</span>
-                    <span>90%</span>
+                    <span>38%</span>
                 </div>
                 <div class="bar">
                     <div id="php-bar"></div>
@@ -66,56 +66,56 @@
             <h2>SOFT SKILLS</h2>
             <div class="skills">
                 <div class="details">
-                    <span>HTML</span>
-                    <span>90%</span>
+                    <span>Trabajo en equipo</span>
+                    <span>98%</span>
                 </div>
                 <div class="bar-2">
-                    <div id="html-bar"></div>
+                    <div id="habil-1"></div>
                 </div>
             </div>
             <div class="skills">
                 <div class="details">
-                    <span>CSS</span>
+                    <span>Autodeprecion</span>
                     <span>75%</span>
                 </div>
                 <div class="bar-2">
-                    <div id="css-bar"></div>
+                    <div id="habil-2"></div>
                 </div>
             </div>
             <div class="skills">
                 <div class="details">
-                    <span>Javascript</span>
-                    <span>82%</span>
+                    <span>Tendencias suicidas</span>
+                    <span>100%</span>
                 </div>
                 <div class="bar-2">
-                    <div id="js-bar"></div>
+                    <div id="habil-3"></div>
                 </div>
             </div>
             <div class="skills">
                 <div class="details">
-                    <span>jQuery</span>
-                    <span>68%</span>
+                    <span>Criar palomas</span>
+                    <span>98%</span>
                 </div>
                 <div class="bar-2">
-                    <div id="jQuery-bar"></div>
+                    <div id="habil-4"></div>
                 </div>
             </div>
             <div class="skills">
                 <div class="details">
-                    <span>Angular</span>
+                    <span>Inlges</span>
+                    <span>40%</span>
+                </div>
+                <div class="bar-2">
+                    <div id="habil-5"></div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="details">
+                    <span>Dislexia</span>
                     <span>90%</span>
                 </div>
                 <div class="bar-2">
-                    <div id="angular-bar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="details">
-                    <span>PHP</span>
-                    <span>90%</span>
-                </div>
-                <div class="bar-2">
-                    <div id="php-bar"></div>
+                    <div id="habil-6"></div>
                 </div>
             </div>
         </div>
