--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,7 @@
 .container{
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto;    
+    font-family: "Poppins",sans-serif;    
+    color: #ffffff;
 }
 
