--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,13 +1,19 @@
-
+/* globales */
 h2{
     font-size: 3rem;
-    text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);    
+    text-transform: uppercase;
+    text-align: center;
+    text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.923);    
+    margin-bottom: 4rem;
 }
+p{
+    color: black;
+    text-align: center;
+}
+/* contenedor principal */
 .container{
     display: flex;
     grid-template-columns: repeat(2,1fr);
-    font-family: "Poppins",sans-serif;
-    color: #ffffff;
     font-weight: 500;
     position: relative;
     margin-top: 15rem;
@@ -35,16 +41,28 @@ h2{
 .foto p{
     margin-top: 2rem;
     text-align: center;
-}
-.texto p{
-    color: black;
-    text-align: center;
+    color: white;
+    font-size: 1.5rem;
 }
 
+/* responsive con mediaquery */
 @media (min-width: 480) {
     
 }
 
 @media (min-width: 768) {
     
+}
+.shape-3{
+    height: 280px;
+    width: 280px;
+    background: linear-gradient(
+        #dfa4ff,
+        #c690ff
+    );
+    border-radius: 50%;
+    position: absolute;
+    top: -13rem;
+    right: -5.5rem;
+    z-index: -1;
 }
