--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -1,17 +1,18 @@
+/* globales */
 h2 {
     font-size: 3rem;
     text-transform: uppercase;
     text-align: center;
-    text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
+    text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.923);
 }
 
 h3 {
     text-transform: uppercase;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 h4 {
-    margin: 2rem;
+    margin: 1rem;
 }
 
 ul {
@@ -19,7 +20,7 @@ ul {
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     text-align: center;
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 li {
@@ -28,31 +29,21 @@ li {
 
 p {
     text-align: center;
-}
-
-#education p {
     color: black;
 }
-
+/* contenedor principal */
 .container {
-    font-family: "Poppins", sans-serif;
-    color: #ffffff;
+    margin-top: 15rem;
+    margin-bottom: 4rem;
     font-weight: 500;
     position: relative;
 }
 
-.cont__education {
-    /* display: grid; */
-    margin-top: 15rem;
-    margin-bottom: 4rem;
-}
-
 .cont__title {
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
 }
 
 .cont__text {
-
     align-items: center;
 }
 
@@ -62,7 +53,7 @@ p {
 }
 
 .texto {
-    margin-bottom: 8rem;
+    margin-bottom: 2rem;
 }
 
 .row {
@@ -72,7 +63,17 @@ p {
     flex-wrap: wrap;
     justify-content: center;
 }
-
+/* decoracion de cajas de texto*/
+.caja{
+    width: 100%;
+    padding: 10px 10px;
+    background-color: rgba(255,255,255,0.06);
+    border: 2px solid rgba(255,255,255,0.06);
+    border-radius: 10px;
+    box-shadow: 0 20px 30px rgba(0,0,0,0.2);
+    backdrop-filter: blur(10px)
+}
+/* circulos de fondo  */
 .shape-3 {
     height: 280px;
     width: 280px;
@@ -81,8 +82,8 @@ p {
         #a231ff);
     border-radius: 50%;
     position: absolute;
-    top: -150px;
-    right: 450px;
+    top: -1rem;
+    left: 7rem;
     z-index: -1;
 }
 
@@ -93,17 +94,7 @@ p {
             #ffaff2);
     border-radius: 50%;
     position: absolute;
-    bottom: 20px;
-    right: -100px;
+    bottom: 1rem;
+    right: -6rem;
     z-index: -1;
-}
-
-.caja{
-    width: 100%;
-    padding: 20px 10px;
-    background-color: rgba(255,255,255,0.06);
-    border: 2px solid rgba(255,255,255,0.06);
-    border-radius: 10px;
-    box-shadow: 0 20px 30px rgba(0,0,0,0.2);
-    backdrop-filter: blur(10px)
 }
