--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,9 +1,10 @@
 <div class="container cont__education">
     <section id="education">
         <div class="row">
+<!-- titulo de seccion -->
             <h2 class="cont__title">educacion</h2>
         </div>
-
+<!-- seccion de cajas  -->
         <div class="row cont__text">
             <div class="col-lg-12 col-md-12 texto">
                 <ul>
@@ -25,6 +26,7 @@
                 </ul>                
             </div>
         </div>
+<!-- circulos de fondo -->
         <div class="shape-3"></div>
         <div class="shape-1"></div>
     </section>
