--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -1,16 +1,18 @@
+/* globales */
 h2{
-    font-size: 3rem;text-transform: uppercase;
+    font-size: 3rem;
+    text-transform: uppercase;
     text-align: center;
-    text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
+    text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.923);
 }
 
 h3{
     text-transform: uppercase;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 h4{
-    margin: 2rem;
+    margin: 1rem;
 }
 
 ul{
@@ -18,7 +20,7 @@ ul{
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     text-align: center;
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 li{
@@ -29,8 +31,8 @@ p{
     text-align: center;
     color: black;
 }
-
-.cont__experience{
+/* contenedor principal */
+.container{
     margin-top: 15rem;
     margin-bottom: 7rem;
     font-family: "Poppins",sans-serif;
@@ -40,16 +42,15 @@ p{
 }
 
 .experience__title{
-    padding-bottom: 5rem;
+    padding-bottom: 4rem;
 }
 
 .cont__text{
-
     align-items: center;
 }
 
 #experiencia{
-    padding: 3rem , 0;
+    padding: 2rem , 0;
     align-items: center;
 }
 
@@ -59,16 +60,17 @@ p{
     flex-wrap: wrap;
     justify-content: center;
 }
-
+/* decoraciones de las columnas */
 .caja{
     width: 100%;
-    padding: 20px 10px;
+    padding: 10px 10px;
     background-color: rgba(255,255,255,0.06);
     border: 2px solid rgba(255,255,255,0.06);
     border-radius: 10px;
     box-shadow: 0 20px 30px rgba(0,0,0,0.2);
     backdrop-filter: blur(10px)
 }
+/* circulos de fondo */
 .shape-1{
     height: 220px;
     width: 220px;
