--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,11 +1,13 @@
 <div class="container cont__experience">
+<!-- circulos de fondo -->
     <div class="shape-2"></div>
     <div class="shape-1"></div>
     <section id="experience">
         <div class="row">
+<!-- titulo de seccion -->
             <h2 class="experience__title">experiencia</h2>
         </div>
-
+<!-- cajas de trabajos -->
         <div class="row cont__text">
             <div class="col-lg-12 col-md-12 texto">
                 <ul>
