--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,30 +1,21 @@
+/* globales */
 h5{
     font-size: 1.2rem;
     margin-bottom: 2rem;
 }
-
 a{
     font-size: 1rem;
     text-decoration: none;
     text-align: center;
     color: rgb(169, 130, 255);
     font-weight: bold;
-    /* text-shadow: 0rem 0.3rem 4px rgba(255, 255, 255, 0.81); */
 }
-
+/* pasar puntero por arriba de links de argentina y yoprog*/
 a:hover{
     color: rgb(169, 130, 255);
     text-shadow: 0rem 0.3rem 4px rgba(255, 255, 255, 0.923);
 }
-.nom__a{
-    margin-right: 2rem;
-}
-
-footer{
-    width: 100%;
-    margin: auto;
-}
-
+/* contenedor principal */
 .container {
     font-family: "Poppins",sans-serif;
     color: #ffffff;
@@ -33,10 +24,14 @@ footer{
     margin: 6rem auto;
     width: 100%;
 }
+/* nombre derecho autor */
 .nom{
     margin: 2rem auto;
 }
-
+/* iconos de redes */
 .redes{
     margin: 2rem auto;
+}
+.nom__a{
+    margin-right: 2rem;
 }
