--- a/src/app/components/progress-bar/progress-bar.component.css
+++ b/src/app/components/progress-bar/progress-bar.component.css
@@ -74,13 +74,13 @@ h2{
     box-shadow: 0 0 5px rgba(255, 140, 240, 0.6);
 }
 
-
+/* animaciones barras de hard skills  */
 #html-bar{
     animation: html-fill 2s forwards;
 }
 @keyframes html-fill{
     100%{
-        width: 90%;
+        width: 70%;
     }
 }
 #css-bar{
@@ -88,7 +88,7 @@ h2{
 }
 @keyframes css-fill{
     100%{
-        width: 75%;
+        width: 55%;
     }
 }
 #js-bar{
@@ -96,7 +96,7 @@ h2{
 }
 @keyframes js-fill {
     100%{
-        width: 82%;
+        width: 32%;
     }
 }
 #jQuery-bar{
@@ -104,7 +104,7 @@ h2{
 }
 @keyframes jQuery-fill{
     100%{
-        width: 68%;
+        width: 38%;
     }
 }
 #angular-bar{
@@ -112,7 +112,7 @@ h2{
 }
 @keyframes angular-fill{
     100%{
-        width: 68%;
+        width: 48%;
     }
 }
 #php-bar{
@@ -120,6 +120,57 @@ h2{
 }
 @keyframes php-fill{
     100%{
-        width: 68%;
+        width: 38%;
+    }
+}
+
+/* ________________animaciones barras de soft skills__________________ */
+
+#habil-1{
+    animation: html-fill 2s forwards;
+}
+@keyframes html-fill{
+    100%{
+        width: 70%;
+    }
+}
+#habil-2{
+    animation: css-fill 2s forwards;
+}
+@keyframes css-fill{
+    100%{
+        width: 55%;
+    }
+}
+#habil-3{
+    animation: js-fill 2s forwards;
+}
+@keyframes js-fill {
+    100%{
+        width: 32%;
+    }
+}
+#habil-4{
+    animation: jQuery-fill 2s forwards;
+}
+@keyframes jQuery-fill{
+    100%{
+        width: 38%;
+    }
+}
+#habil-5{
+    animation: angular-fill 2s forwards;
+}
+@keyframes angular-fill{
+    100%{
+        width: 48%;
+    }
+}
+#habil-6{
+    animation: php-fill 2s forwards;
+}
+@keyframes php-fill{
+    100%{
+        width: 38%;
     }
 }
