--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,25 +1,23 @@
+/* globales */
 p{
     margin-top: 10rem;
     margin-bottom: 10rem;
     color: black;
 }
-
-.container{
-    display: grid;
-    font-family: "Poppins",sans-serif;
-    color: #ffffff;
-    font-weight: 500;
-    justify-content: center;
-    position: relative;
-}
-
-#skills h2{
+h2{
     margin-top: 2rem;
     margin-bottom: 6rem;
     font-size: 3rem;
     text-transform: uppercase;
     text-align: center;
     text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
+}
+/* contenedor principal */
+.container{
+    display: grid;
+    font-weight: 500;
+    justify-content: center;
+    position: relative;
 }
 
 #descrip {
@@ -31,7 +29,7 @@ p{
 .bar{
  margin-bottom: 4rem;
 }
-
+/* circulos de fondo */
 .shape-1{
     height: 220px;
     width: 220px;
@@ -41,9 +39,9 @@ p{
     );
     border-radius: 50%;
     position: absolute;
-    bottom: -100px;
-    left: -150px;
-    z-index: -1;
+    bottom: -3rem;
+    left: -5rem;
+    z-index: -1rem;
 }
 .shape-2{
     height: 180px;
@@ -54,8 +52,8 @@ p{
     );
     border-radius: 50%;
     position: absolute;
-    top: -90px;
-    left: 194px;
+    top: -5.2rem;
+    left: -5rem;
     z-index: -1;
 }
 
@@ -68,7 +66,7 @@ p{
     );
     border-radius: 50%;
     position: absolute;
-    top: 420px;
-    right: -90px;
+    top: 27rem;
+    right: -5.5rem;
     z-index: -1;
 }
