--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,15 @@
 <header>
+  <!-- circulos de fondo -->
   <div class="shape-2"></div>
   <div class="shape-1"></div>
   <div class="container">
+    <div class="row">
+<!-- menu de navegacion interna -->
+      <app-menu></app-menu>
+    </div>
+<!-- ilustracio -->
     <div class="col-lg-12 banner">
       <img src="../../../assets/ilustracion-1.svg" alt="ilustration">
     </div>
   </div>
-
 </header>
