--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,24 +1,22 @@
-<section id="skills">
-    <div class="container">
+<div class="container">
+    <section id="skills">
         <div class="shape-2"></div>
         <div class="shape-1"></div>
         <div class="row">
-            <div id="descrip" class="col-lg-12 col-md-12 col-sm-6">
-                <h2>SKILLS</h2>
-                <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
-                    participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
-                    En el ámbito laboral me desenvolví como vendedora en el sector retail con más de 5 años de
-                    experiencia en atención al público y 3 años como encargada de la gestión y coordinación de grupos de
-                    trabajo.</p>
+            <h2>SKILLS</h2>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-6 texto">
+                <p> Me considero una persona dinámica y adaptable a los diferentes entornos que se me presenten, con una
+                    excelente predisposición al trabajo en equipo y a la resolución rápida de problemas complejos sin
+                    perder la perspectiva laboral y las relaciones profesionales.</p>
             </div>
         </div>
         <div class="row">
-            <div class=" col-lg-6 bar col-md-6 col-sm-6">
+            <div class=" col-lg-12 col-md-12 col-sm-12 progre">
                 <app-progress-bar></app-progress-bar>
             </div>
         </div>
-
         <div class="shape-3"></div>
-
-    </div>
-</section>
+    </section>
+</div>
